name: slingspace
version: 20121100
license: PublicDomain
author: Eelis van der Weegen
maintainer: slingspace AT contacts DOT eelis ANOTHERDOT net
stability: experimental
build-type: Simple
synopsis: A 3D Spiderman-like slinging game.
build-depends: base, GLUT, OpenGL>=2.0, stm, network, template-haskell, random, containers, mtl, clock, MonadRandom, deepseq, storablevector, storable-tuple, storable-record, vector
tested-with: GHC==7.4
data-files:
  doc/manual.xhtml
  schemes/cool.scheme
  schemes/woods.scheme
  config/gameplay.txt
  config/client.txt
  config/server.txt
  config/gui.txt
  config/finite-tunnel.txt
  config/infinite-tunnel.txt
category: games

executable: slingspace
main-is: local-infinite.hs
hs-source-dirs: src
ghc-options: -O2 -Wall -fno-warn-orphans -fno-warn-unused-binds -fno-warn-unused-do-bind
extensions: CPP ForeignFunctionInterface

executable: slingspace-autopilot
main-is: autopilot.hs
hs-source-dirs: src
ghc-options: -O2 -Wall -fno-warn-orphans -fno-warn-unused-binds -fno-warn-unused-do-bind
extensions: CPP ForeignFunctionInterface

executable: slingspace-bench
main-is: bench.hs
hs-source-dirs: src
ghc-options: -O2 -Wall -fno-warn-orphans -fno-warn-unused-binds -fno-warn-unused-do-bind
extensions: CPP ForeignFunctionInterface
