name: slingspace
version: 0
license: PublicDomain
author: Eelis van der Weegen
maintainer: slingspace AT contacts DOT eelis ANOTHERDOT net
stability: experimental
build-type: Simple
cabal-version: >= 1.2
synopsis: A 3D Spiderman-like slinging game.
tested-with: GHC==7.4
data-files:
  doc/manual.xhtml
  schemes/cool.hs
  schemes/woods.hs
  config/gameplay.hs
  config/client.txt
  config/server.txt
  config/gui.hs
  config/finite-tunnel.txt
  config/infinite-tunnel.txt
category: games

library
  exposed-modules: SlingSpace.Configuration
  other-modules: Math, Logic, MyUtil, Octree, Gui, Obstacles, Paths_slingspace
  build-depends: base, vector, deepseq, MonadRandom, clock, network
  hs-source-dirs: src
  extensions: CPP ForeignFunctionInterface

executable slingspace
  main-is: alone.hs
  hs-source-dirs: src
  ghc-options: -O2 -Wall -fno-warn-orphans -fno-warn-unused-binds -fno-warn-unused-do-bind
  extensions: CPP ForeignFunctionInterface
  build-depends: base, GLUT, OpenGL>=2.0, stm, network, template-haskell, random, containers, mtl, clock, MonadRandom, deepseq, storablevector, storable-tuple, storable-record, vector, hint

executable slingspace-autopilot
  main-is: autopilot.hs
  hs-source-dirs: src
  ghc-options: -O2 -Wall -fno-warn-orphans -fno-warn-unused-binds -fno-warn-unused-do-bind
  extensions: CPP ForeignFunctionInterface
  build-depends: base, GLUT, OpenGL>=2.0, stm, network, template-haskell, random, containers, mtl, clock, MonadRandom, deepseq, storablevector, storable-tuple, storable-record, vector, hint

executable slingspace-sidekick
  main-is: sidekick.hs
  hs-source-dirs: src
  ghc-options: -O2 -Wall -fno-warn-orphans -fno-warn-unused-binds -fno-warn-unused-do-bind
  extensions: CPP ForeignFunctionInterface
  build-depends: base, GLUT, OpenGL>=2.0, stm, network, template-haskell, random, containers, mtl, clock, MonadRandom, deepseq, storablevector, storable-tuple, storable-record, vector, hint

executable slingspace-bench
  main-is: bench.hs
  hs-source-dirs: src
  ghc-options: -O2 -Wall -fno-warn-orphans -fno-warn-unused-binds -fno-warn-unused-do-bind
  extensions: CPP ForeignFunctionInterface
  build-depends: base, GLUT, OpenGL>=2.0, stm, network, template-haskell, random, containers, mtl, clock, MonadRandom, deepseq, storablevector, storable-tuple, storable-record, vector, hint
