name: slingspace
version: 0
license: PublicDomain
author: Eelis van der Weegen
maintainer: slingspace AT contacts DOT eelis ANOTHERDOT net
stability: experimental
build-type: Simple
cabal-version: >= 1.2
synopsis: A 3D Spiderman-like slinging game.
tested-with: GHC==7.4
data-files:
  doc/manual.xhtml
  schemes/cool.hs
  config/gameplay.hs
  config/gui.hs
category: games

library
  exposed-modules: SlingSpace.Configuration
  other-modules: Math, Logic, Util, Octree, Gui, Obstacles, Paths_slingspace, Controllers
  build-depends: base, vector, deepseq, MonadRandom, clock
  hs-source-dirs: src
  extensions: CPP ForeignFunctionInterface

executable slingspace
  main-is: alone.hs
  hs-source-dirs: src
  ghc-options: -O2 -Wall -fno-warn-orphans -fno-warn-unused-binds -fno-warn-unused-do-bind
  extensions: CPP ForeignFunctionInterface
  build-depends: base, GLURaw, GLFW-b, OpenGL>=2.0, random, containers, mtl, clock, MonadRandom, deepseq, storablevector, storable-tuple, storable-record, vector, hint

executable slingspace-autopilot
  main-is: autopilot.hs
  hs-source-dirs: src
  ghc-options: -O2 -Wall -fno-warn-orphans -fno-warn-unused-binds -fno-warn-unused-do-bind
  extensions: CPP ForeignFunctionInterface
  build-depends: base, GLURaw, GLFW-b, OpenGL>=2.0, random, containers, mtl, clock, MonadRandom, deepseq, storablevector, storable-tuple, storable-record, vector, hint
